# make-fastapi

./: .env  .env.example  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ee36b5c41a19_initial_migration.py
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  middleware.py  security.py
app/crud/: base_crud.py  user_crud.py
app/db/: session.py
app/exceptions/: credentials.py  crud.py
app/models/: __init__.py  user.py
app/schemas/: user.py
